--- a/AlgimedDesktopTest.WpfImplementation/Views/MainWindow.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Views/MainWindow.xaml
@@ -2,19 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:prism="http://prismlibrary.com/"
         xmlns:vm="clr-namespace:AlgimedDesktopTest.WpfImplementation.ViewModels"
+        xmlns:utils="clr-namespace:AlgimedDesktopTest.WpfImplementation.Utils"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
         Title="{Binding Title}"
         Width="700"
-        Height="500"
+        Height="700"
         WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Label HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Content="Hello World!"/>
-    </Grid>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <prism:InvokeCommandAction Command="{Binding WindowLoadedCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    <ContentControl prism:RegionManager.RegionName="{x:Static utils:RegionNames.PageRegion}"/>
 </Window>
