--- a/AlgimedDesktopTest.WpfImplementation/Views/ModeItemView.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Views/ModeItemView.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:vm="clr-namespace:AlgimedDesktopTest.WpfImplementation.ViewModels"
@@ -10,9 +11,95 @@
              d:DataContext="{d:DesignInstance Type=vm:ModeItemViewModel}"
              d:Width="700"
              d:Height="700">
+    <UserControl.Resources>
+        <Style x:Key="Std_TextBox" TargetType="TextBox">
+            <Style.Setters>
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="BorderThickness" Value="2" />
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style.Setters>
+        </Style>
+        <Style x:Key="Std_Label" TargetType="Label">
+            <Style.Setters>
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="VerticalContentAlignment" Value="Center" />
+            </Style.Setters>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Label HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Content="Hello from ModeItemView!"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="140"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Row="0" Grid.Column="0"
+               Style="{StaticResource Std_Label}"
+               Content="Mode Name:"/>
+        <TextBox Grid.Row="0" Grid.Column="1"
+                 Style="{StaticResource Std_TextBox}"
+                 Text="{Binding Item.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <TextBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </TextBox.Resources>
+        </TextBox>
+        <Label Grid.Row="1" Grid.Column="0"
+               Style="{StaticResource Std_Label}"
+               Content="Mode Bottles Number:"/>
+        <TextBox Grid.Row="1" Grid.Column="1" x:Name="bottle_number_text_box"
+                 Style="{StaticResource Std_TextBox}"
+                 Text="{Binding Item.MaxBottleNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <TextBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </TextBox.Resources>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="TextChanged">
+                    <prism:InvokeCommandAction Command="{Binding MaxBottleNumberCommand}"
+                                               CommandParameter="{Binding Text, ElementName=bottle_number_text_box}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </TextBox>
+        <Label Grid.Row="2" Grid.Column="0"
+               Style="{StaticResource Std_Label}"
+               Content="Mode Used Tips:"/>
+        <TextBox Grid.Row="2" Grid.Column="1" x:Name="used_tips_text_box"
+                 Style="{StaticResource Std_TextBox}"
+                 Text="{Binding Item.MaxUsedTips, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <TextBox.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </TextBox.Resources>
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="TextChanged">
+                    <prism:InvokeCommandAction Command="{Binding MaxUsedTipsCommand}"
+                                               CommandParameter="{Binding Text, ElementName=used_tips_text_box}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </TextBox>
+        <!--todo-->
+        <Grid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
+              VerticalAlignment="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"
+                    Margin="5"
+                    Content="{Binding DbModeUiText}"
+                    Command="{Binding SaveCommand}"/>
+            <Button Grid.Column="1"
+                    Margin="5"
+                    Content="Back"
+                    Command="{Binding GoBackCommand}"/>
+        </Grid>
     </Grid>
 </UserControl>
