--- a/AlgimedDesktopTest.WpfImplementation/Views/ItemsPage.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Views/ItemsPage.xaml
@@ -26,6 +26,7 @@
                     Content="Sign out"/>
             <Label DockPanel.Dock="Right"
                    Margin="5"
+                   FontWeight="Bold"
                    HorizontalAlignment="Right"
                    Content="Profile:"/>
         </DockPanel>
