--- a/AlgimedDesktopTest.WpfImplementation/Views/RegistrationPage.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Views/RegistrationPage.xaml
@@ -9,10 +9,26 @@
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=vm:RegistrationPageViewModel}"
              d:Width="700"
-             d:Height="700">
+             d:Height="700"
+             d:Background="DarkGray"
+             Background="DarkGray">
     <Grid>
-        <Label HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Content="Hello from RegistrationPage!"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <DockPanel Grid.Row="0">
+            <Button DockPanel.Dock="Right"
+                    Margin="5" Padding="2.5"
+                    MaxWidth="100"
+                    HorizontalAlignment="Right"
+                    Content="Sign in"
+                    Command="{Binding SignInCommand}"/>
+            <Label DockPanel.Dock="Right"
+                   Margin="5"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Right"
+                   Content="Already have account? Lets:"/>
+        </DockPanel>
     </Grid>
 </UserControl>
