--- a/AlgimedDesktopTest.WpfImplementation/Dictionaries/StyleDictionary.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Dictionaries/StyleDictionary.xaml
@@ -1,5 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="Std_PasswordBox" TargetType="PasswordBox">
+        <Style.Setters>
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+        </Style.Setters>
+    </Style>
     <Style x:Key="Std_TextBox" TargetType="TextBox">
         <Style.Setters>
             <Setter Property="Margin" Value="5" />
