--- a/AlgimedDesktopTest.WpfImplementation/Views/AuthorizationPage.xaml
+++ b/AlgimedDesktopTest.WpfImplementation/Views/AuthorizationPage.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:vm="clr-namespace:AlgimedDesktopTest.WpfImplementation.ViewModels"
@@ -30,5 +31,57 @@
                    HorizontalAlignment="Right"
                    Content="Not have account? Lets:"/>
         </DockPanel>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0"
+                   HorizontalAlignment="Right"
+                   Style="{StaticResource Std_Label}"
+                   Content="Login:"/>
+            <TextBox Grid.Row="0" Grid.Column="1"
+                     Style="{StaticResource Std_TextBox}"
+                     Text="{Binding Login}">
+                <TextBox.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </TextBox.Resources>
+            </TextBox>
+            <Label Grid.Row="1" Grid.Column="0"
+                   Content="Password:"
+                   HorizontalAlignment="Right"
+                   Style="{StaticResource Std_Label}"/>
+            <Border Grid.Row="1" Grid.Column="1"
+                    BorderThickness="1"
+                    MaxHeight="35"
+                    CornerRadius="10"
+                    Padding="0"
+                    Opacity="0.5"
+                    BorderBrush="Gray">
+                <PasswordBox x:Name="pwd"
+                             Style="{StaticResource Std_PasswordBox}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="PasswordChanged">
+                            <prism:InvokeCommandAction Command="{Binding PasswordChangedCommand}"
+                                                       CommandParameter="{Binding ElementName=pwd}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </PasswordBox>
+            </Border>
+            <Button Grid.Row="2" Grid.Column="1"
+                    MaxWidth="100"
+                    MinWidth="100"
+                    Margin="5"
+                    HorizontalAlignment="Left"
+                    Content="Sign in"
+                    Command="{Binding SignInCommand}"/>
+        </Grid>
     </Grid>
 </UserControl>
